test/cases/compile_errors/stage1/obj/implicit_casting_undefined_c_pointer_to_zig_pointer.zig
comptime {
    var c_ptr: [*c]u8 = undefined;
    var zig_ptr: *u8 = c_ptr;
    _ = zig_ptr;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:3:24: error: use of undefined value here causes undefined behavior
